# SalesStrategy_AgentTeam

./: .gitignore  CODEBASE_ARCHITECTURE.md  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  tmpclaude-b643-cwd
data/catalogs/: README.md  mathworks_catalog.json
src/: config.py  main.py
src/agents/: __init__.py  coordinator.py  gatherer.py  identifier.py  validator.py
src/core/: base_agent.py  exceptions.py  model_router.py
src/data_sources/: base.py  job_boards.py  mcp_ddg_client.py  product_catalog.py  scraper.py
src/graph/: workflow.py
src/models/: domain.py  state.py
src/utils/: __init__.py  json_parsing.py  logging.py
tests/: conftest.py  manual_test_ddg_mcp.py
tests/fixtures/: __init__.py  loader.py
tests/fixtures/job_postings/: generic.json  greenhouse.json  lever.json
tests/fixtures/llm_responses/: gatherer_analysis.json  identifier_opportunities.json  identifier_requirements.json  validator_risks.json  validator_scoring.json
tests/fixtures/search_results/: acme_corp.json  tech_startup.json
tests/test_agents/: test_coordinator.py  test_gatherer.py  test_identifier.py  test_validator.py
tests/test_data_sources/: __init__.py  test_base.py  test_job_boards.py  test_mcp_client.py  test_product_catalog.py  test_scraper.py
tests/test_integration/: __init__.py  test_checkpointing.py  test_e2e_ollama.py  test_error_recovery.py  test_feedback_loops.py  test_pipeline.py  test_realistic_fixtures.py
tests/test_model_router/: test_router.py
tests/test_utils/: test_json_parsing.py
