[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salesstrategy_agentteam"
version = "0.1.0"
description = "Professional Sales Strategy Agent Team"
requires-python = ">=3.9"
dependencies = [
    # Add your pip requirements here, e.g., "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["src","tests","data"]
[tool.pytest.ini_options]
pythonpath = ["."]